// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Tooltip aligned left unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      data-popup-open=""
      id="base-ui-_r_b_"
    >
      Hover me
    </span>
  </span>
</div>
`;

exports[`renders Tooltip aligned right unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      data-popup-open=""
      id="base-ui-_r_j_"
    >
      Hover me
    </span>
  </span>
</div>
`;

exports[`renders Tooltip aligned top left unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      data-popup-open=""
      id="base-ui-_r_f_"
    >
      Hover me
    </span>
  </span>
</div>
`;

exports[`renders Tooltip aligned top right unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      data-popup-open=""
      id="base-ui-_r_n_"
    >
      Hover me
    </span>
  </span>
</div>
`;

exports[`renders Tooltip disabled unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      id="base-ui-_r_5_"
    >
      Hover me
    </span>
  </span>
</div>
`;

exports[`renders Tooltip unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      id="base-ui-_r_1_"
    >
      Hover me
    </span>
  </span>
</div>
`;

exports[`renders Tooltip visible unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      data-popup-open=""
      id="base-ui-_r_7_"
    >
      Hover me
    </span>
  </span>
</div>
`;

exports[`renders Tooltip with jsx content unchanged 1`] = `
<div>
  <span
    class="_root_1aba97"
  >
    <span
      class="_trigger_1aba97"
      id="base-ui-_r_3_"
    >
      Hover me
    </span>
  </span>
</div>
`;
